// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`when rendering a list table with fixed widths renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
}

.emotion-1 {
  margin: 24px 0;
}

.emotion-2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-3 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.emotion-4 {
  position: relative;
  color: var(--font-color-primary);
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.dark-theme .emotion-4 {
  background-color: #001E2B;
  box-shadow: 0 4px #3D4F58;
}

.emotion-5 {
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

.emotion-5 * {
  font-size: 13px!important;
}

.emotion-5>div {
  height: unset;
  min-height: unset;
}

.emotion-5>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.emotion-6 {
  padding: 0 8px;
  overflow: hidden;
  padding-left: 32px;
}

.emotion-6:focus-visible {
  box-shadow: inset;
}

.emotion-6:last-child {
  padding-right: 24px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  opacity: 1;
  min-height: 40px;
  max-height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-8 *,
.emotion-8 p,
.emotion-8 a {
  line-height: 20px;
}

.emotion-8>*,
.emotion-8>div p {
  margin: 0 0 12px!important;
}

.emotion-8>div *:last-child,
.emotion-8>*:last-child {
  margin-bottom: 0!important;
}

.emotion-9 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-9 strong,
.emotion-9 b {
  font-weight: 600;
}

.emotion-10 {
  padding: 0 8px;
  overflow: hidden;
}

.emotion-10:focus-visible {
  box-shadow: inset;
}

.emotion-10:last-child {
  padding-right: 24px;
}

<div
    class="emotion-0 emotion-1"
    tabindex="0"
  >
    <table
      class="emotion-2"
      data-lgid="lg-table"
    >
      <colgroup>
        <col
          style="width: 5%;"
        />
        <col
          style="width: 10%;"
        />
        <col
          style="width: 15%;"
        />
        <col
          style="width: 20%;"
        />
        <col
          style="width: 30%;"
        />
        <col
          style="width: 20%;"
        />
      </colgroup>
      <thead
        class="emotion-3 emotion-4"
      />
      <tbody>
        <tr
          aria-hidden="false"
          class=""
          data-expanded="false"
          data-lgid="lg-table-row"
          data-selected="false"
          id="lg-table-row-0"
        >
          <td
            class="emotion-5 emotion-6"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-7"
              data-state="entered"
            >
              <div
                class="emotion-8"
              >
                <p
                  class="emotion-9"
                >
                  notebook
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-10 emotion-5"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-7"
              data-state="entered"
            >
              <div
                class="emotion-8"
              >
                <p
                  class="emotion-9"
                >
                  50
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-10 emotion-5"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-7"
              data-state="entered"
            >
              <div
                class="emotion-8"
              >
                <p
                  class="emotion-9"
                >
                  8.5x11,in
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-10 emotion-5"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-7"
              data-state="entered"
            >
              <div
                class="emotion-8"
              >
                <p
                  class="emotion-9"
                >
                  A
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-10 emotion-5"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-7"
              data-state="entered"
            >
              <div
                class="emotion-8"
              >
                <p
                  class="emotion-9"
                >
                  college-ruled,perforated
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-10 emotion-5"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-7"
              data-state="entered"
            >
              <div
                class="emotion-8"
              >
                <p
                  class="emotion-9"
                >
                  8
                </p>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;

exports[`when rendering a list-table directive renders correctly 1`] = `
<DocumentFragment>
  .emotion-0 {
  overflow: auto;
  width: 100%;
  position: relative;
}

.emotion-1 {
  margin: 24px 0;
}

.emotion-2 {
  border-spacing: 0;
  border-collapse: collapse;
  width: 100%;
  color: #1C2D38;
  font-size: 13px;
  line-height: 20px;
}

.emotion-3 {
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.emotion-4 {
  position: relative;
  color: var(--font-color-primary);
  background-color: #FFFFFF;
  box-shadow: 0 4px #E8EDEB;
}

.dark-theme .emotion-4 {
  background-color: #001E2B;
  box-shadow: 0 4px #3D4F58;
}

.emotion-5 {
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  line-height: 24px;
  font-weight: 600;
  font-size: 13px;
  width: auto;
}

.emotion-5 * {
  font-size: 13px!important;
}

.emotion-5>div {
  height: unset;
  min-height: unset;
}

.emotion-6 {
  padding: 0 8px;
  overflow: hidden;
  padding-left: 32px;
  width: 150px;
}

.emotion-6:focus-visible {
  box-shadow: inset;
}

.emotion-6:last-child {
  padding-right: 24px;
}

.emotion-7 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-9 {
  padding: 0 8px;
  overflow: hidden;
  width: 150px;
}

.emotion-9:focus-visible {
  box-shadow: inset;
}

.emotion-9:last-child {
  padding-right: 24px;
}

.emotion-23:nth-of-type(even) {
  background-color: #F9FBFA;
}

.emotion-24:nth-of-type(even) {
  background-color: #F9FBFA;
}

.dark-theme .emotion-24:nth-of-type(even) {
  background-color: #112733;
}

.emotion-25 {
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
  background-color: #F9FBFA;
  border-right: 3px solid #E8EDEB;
  font-weight: 600;
}

.emotion-25 * {
  font-size: 13px!important;
}

.emotion-25>div {
  height: unset;
  min-height: unset;
}

.emotion-25>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

.dark-theme .emotion-25 {
  background-color: #112733;
  border-right: 3px solid #3D4F58;
}

.emotion-26 {
  padding: 0 8px;
  overflow: hidden;
  padding-left: 32px;
}

.emotion-26:focus-visible {
  box-shadow: inset;
}

.emotion-26:last-child {
  padding-right: 24px;
}

.emotion-27 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 40px;
  transition-property: min-height,max-height,opacity,padding,transform;
  transition-duration: 150ms;
  transition-timing-function: ease;
  opacity: 1;
  min-height: 40px;
  max-height: 40px;
  -webkit-box-pack: left;
  -ms-flex-pack: left;
  -webkit-justify-content: left;
  justify-content: left;
  text-align: left;
}

.emotion-28 *,
.emotion-28 p,
.emotion-28 a {
  line-height: 20px;
}

.emotion-28>*,
.emotion-28>div p {
  margin: 0 0 12px!important;
}

.emotion-28>div *:last-child,
.emotion-28>*:last-child {
  margin-bottom: 0!important;
}

.emotion-29 {
  margin: unset;
  font-family: 'Euclid Circular A','Helvetica Neue',Helvetica,Arial,sans-serif;
  color: #001E2B;
  font-size: 13px;
  line-height: 20px;
  color: #001E2B;
  font-weight: 400;
  margin-bottom: 16px;
  color: var(--font-color-primary);
}

.emotion-29 strong,
.emotion-29 b {
  font-weight: 600;
}

.emotion-30 {
  padding: 0 8px;
  overflow: hidden;
}

.emotion-30:focus-visible {
  box-shadow: inset;
}

.emotion-30:last-child {
  padding-right: 24px;
}

.emotion-31 {
  padding: 10px 8px!important;
  vertical-align: top;
  color: var(--font-color-primary);
  overflow-wrap: anywhere;
  word-break: break-word;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: flex-start;
  align-content: flex-start;
}

.emotion-31 * {
  font-size: 13px!important;
}

.emotion-31>div {
  height: unset;
  min-height: unset;
}

.emotion-31>div {
  min-height: unset;
  max-height: unset;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
}

<div
    class="emotion-0 emotion-1"
    tabindex="0"
  >
    <table
      class="emotion-2"
      data-lgid="lg-table"
    >
      <thead
        class="emotion-3 emotion-4"
      >
        <tr
          data-testid="leafygreen-ui-header-row"
        >
          <th
            class="emotion-5 emotion-6"
            data-lgid="lg-table-header"
            scope="col"
          >
            <div
              class="emotion-7"
            >
              <div>
                name
              </div>
            </div>
          </th>
          <th
            class="emotion-5 emotion-9"
            data-lgid="lg-table-header"
            scope="col"
          >
            <div
              class="emotion-7"
            >
              <div>
                quantity
              </div>
            </div>
          </th>
          <th
            class="emotion-5 emotion-9"
            data-lgid="lg-table-header"
            scope="col"
          >
            <div
              class="emotion-7"
            >
              <div>
                size
              </div>
            </div>
          </th>
          <th
            class="emotion-5 emotion-9"
            data-lgid="lg-table-header"
            scope="col"
          >
            <div
              class="emotion-7"
            >
              <div>
                status
              </div>
            </div>
          </th>
          <th
            class="emotion-5 emotion-9"
            data-lgid="lg-table-header"
            scope="col"
          >
            <div
              class="emotion-7"
            >
              <div>
                tags
              </div>
            </div>
          </th>
          <th
            class="emotion-5 emotion-9"
            data-lgid="lg-table-header"
            scope="col"
          >
            <div
              class="emotion-7"
            >
              <div>
                rating
              </div>
            </div>
          </th>
        </tr>
      </thead>
      <tbody>
        <tr
          aria-hidden="false"
          class="emotion-23 emotion-24"
          data-expanded="false"
          data-lgid="lg-table-row"
          data-selected="false"
          id="lg-table-row-0"
        >
          <td
            class="emotion-25 emotion-26"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  journal
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  25
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  14x21,cm
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  A
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  brown, lined
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  9
                </p>
              </div>
            </div>
          </td>
        </tr>
        <tr
          aria-hidden="false"
          class="emotion-23 emotion-24"
          data-expanded="false"
          data-lgid="lg-table-row"
          data-selected="false"
          id="lg-table-row-1"
        >
          <td
            class="emotion-25 emotion-26"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  notebook
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  50
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  8.5x11,in
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  A
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  college-ruled,perforated
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  8
                </p>
              </div>
            </div>
          </td>
        </tr>
        <tr
          aria-hidden="false"
          class="emotion-23 emotion-24"
          data-expanded="false"
          data-lgid="lg-table-row"
          data-selected="false"
          id="lg-table-row-2"
        >
          <td
            class="emotion-25 emotion-26"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  paper
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  100
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  8.5x11,in
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  D
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  watercolor
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  10
                </p>
              </div>
            </div>
          </td>
        </tr>
        <tr
          aria-hidden="false"
          class="emotion-23 emotion-24"
          data-expanded="false"
          data-lgid="lg-table-row"
          data-selected="false"
          id="lg-table-row-3"
        >
          <td
            class="emotion-25 emotion-26"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  planner
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  75
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  22.85x30,cm
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  D
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  2019
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  10
                </p>
              </div>
            </div>
          </td>
        </tr>
        <tr
          aria-hidden="false"
          class="emotion-23 emotion-24"
          data-expanded="false"
          data-lgid="lg-table-row"
          data-selected="false"
          id="lg-table-row-4"
        >
          <td
            class="emotion-25 emotion-26"
            data-lgid="lg-table-cell"
            role="rowheader"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  postcard
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  45
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  10x,cm
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  D
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  double-sided,white
                </p>
              </div>
            </div>
          </td>
          <td
            class="emotion-30 emotion-31"
            data-lgid="lg-table-cell"
          >
            <div
              class="emotion-27"
              data-state="entered"
            >
              <div
                class="emotion-28"
              >
                <p
                  class="emotion-29"
                >
                  2
                </p>
              </div>
            </div>
          </td>
        </tr>
      </tbody>
    </table>
  </div>
</DocumentFragment>
`;
